@@ -25,7 +25,8 @@ Global Controller files from now on.
 - changed loader::file('folder/file') as loader::file('folder/file'.EXT) .
 - added current_dir(), current_class(), current_method() functions to Url helper.
 - loading model from another path bug fixed. added 'models' string and DS.
-- added $config['subhelper_prefix'] = 'my_';  to config.php file.  
+- added $config['subhelper_prefix'] = 'my_';  to config.php file. 
+- added sess_get_flash( $prefix = '', $suffix = '') func. parameters to session drivers. 
 
 //-----------------------------------------------------------------------------
 
